force-app/main/default/objects/Integration__mdt/fields/Easebuzz_Create_Payment_Link_Url__c.field-meta.xml
<CustomField>
    <fullName>Easebuzz_Create_Payment_Link_Url__c</fullName>
    <label>Easebuzz Create Payment Link Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>