force-app/main/default/objects/Integration__mdt/fields/Easebuzz_Get_Transaction_Details_Url__c.field-meta.xml
<CustomField>
    <fullName>Easebuzz_Get_Transaction_Details_Url__c</fullName>
    <label>Easebuzz Get Transaction Details Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>