force-app/main/default/objects/Integration__mdt/fields/Easebuzz_Initiate_Refund_Url__c.field-meta.xml
<CustomField>
    <fullName>Easebuzz_Initiate_Refund_Url__c</fullName>
    <label>Easebuzz Initiate Refund Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>