force-app/main/default/objects/Integration__mdt/fields/Easebuzz_Instacollect_Create_VA__c.field-meta.xml
<CustomField>
    <fullName>Easebuzz_Instacollect_Create_VA__c</fullName>
    <label>Easebuzz Instacollect Create VA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>