force-app/main/default/objects/Integration__mdt/fields/Easebuzz_Refund_Status_Url__c.field-meta.xml
<CustomField>
    <fullName>Easebuzz_Refund_Status_Url__c</fullName>
    <label>Easebuzz Refund Status Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>