force-app/main/default/objects/Integration__mdt/fields/EasyCollectKey__c.field-meta.xml
<CustomField>
    <fullName>EasyCollectKey__c</fullName>
    <label>EasyCollectKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>