force-app/main/default/objects/Integration__mdt/fields/EasyCollectSalt__c.field-meta.xml
<CustomField>
    <fullName>EasyCollectSalt__c</fullName>
    <label>EasyCollectSalt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>