force-app/main/default/objects/Integration__mdt/fields/InstaCollect_Retrieve_Transaction_URL__c.field-meta.xml
<CustomField>
    <fullName>InstaCollect_Retrieve_Transaction_URL__c</fullName>
    <label>InstaCollect Retrieve Transaction URL</label>
    <type>TextArea</type>
</CustomField>