force-app/main/default/objects/Integration__mdt/fields/InstaCollectKey__c.field-meta.xml
<CustomField>
    <fullName>InstaCollectKey__c</fullName>
    <label>InstaCollectKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>