force-app/main/default/objects/Integration__mdt/fields/InstaCollectSalt__c.field-meta.xml
<CustomField>
    <fullName>InstaCollectSalt__c</fullName>
    <label>InstaCollectSalt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>